--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ branches:
     - /^(3\.[1-9]|[4-9]\.\d)\.x$/
 
 install:
-  - cd fq/board-notices
+  - cd board-notices
   - composer install --dev --no-interaction --prefer-source
   - cd ..
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
