--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ matrix:
 
 env:
   global:
-    - EXTNAME="board-notices"  # CHANGE name of the extension HERE
-    - EXTSNIFF="fq/board-notices"
+    - EXTNAME="boardnotices"  # CHANGE name of the extension HERE
+    - EXTSNIFF="fq/boardnotices"
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="1"        # Should we run icc profile sniffer on your images?
     - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
@@ -44,7 +44,7 @@ branches:
     - /^(3\.[1-9]|[4-9]\.\d)\.x$/
 
 install:
-  - cd fq
+  - cd fq/boardnotices
   - composer install --dev --no-interaction --prefer-source
   - cd ..
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
