--- a/fq/boardnotices/config/services.yml
+++ b/fq/boardnotices/config/services.yml
@@ -8,6 +8,7 @@ services:
         arguments:
             - @dbal.conn
             - @user
+            - @cache
             - %tables.boardnotices.notices%
             - %tables.boardnotices.notices_rules%
 
