Changed folder structure for Travis CI builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: php
-
 sudo: required
+
+language: php
 
 matrix:
   include:
@@ -23,17 +23,14 @@ matrix:
     - php: 5.6
       env: DB=mysqli
     - php: hhvm
-      env: DB=mysqli 
-    - php: 7
       env: DB=mysqli
   allow_failures:
     - php: hhvm
-    - php: 7
+  fast_finish: true
 
 env:
   global:
-    - EXTNAME="boardnotices"  # CHANGE name of the extension HERE
-    - EXTSNIFF="fq/boardnotices"
+    - EXTNAME="fq/boardnotices"  # CHANGE name of the extension HERE
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="1"        # Should we run icc profile sniffer on your images?
     - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
@@ -45,11 +42,9 @@ branches:
     - /^(3\.[1-9]|[4-9]\.\d)\.x$/
 
 install:
-  - cd fq/boardnotices
   - composer install --dev --no-interaction --prefer-source
-  - cd ../..
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
-  - cd ../phpBB3
+  - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION
 
@@ -57,14 +52,8 @@ before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION
 
 script:
-  - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTSNIFF; fi"
+  - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION; fi"
-  - mkdir phpBB/ext/$EXTNAME/logs
-  - phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/logs/clover.xml
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTSNIFF/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/core'; fi"
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTSNIFF/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/acpcleanup'; fi"
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTSNIFF/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/acpimport'; fi"
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTSNIFF/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/exif'; fi"
-
-after_script:
-  - sh -c "if [ '$COVERAGE' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.6' ] && [ '$DB' = 'mysqli' ]; then php phpBB/ext/$EXTSNIFF/vendor/bin/coveralls -v; fi"
+  - phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php
+  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTNAME/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
+  
