Fix formatting issues + Added current forum rule

--- a/config/services.yml
+++ b/config/services.yml
@@ -64,3 +64,9 @@ services:
         class: fq\boardnotices\rules\rank
         arguments:
             - @user
+
+    fq.boardnotices.rules.in_forum:
+        class: fq\boardnotices\rules\in_forum
+        arguments:
+            - @user
+            - @request
