--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
-* text=auto
+*		text=auto
+.gitattributes	export-ignore
+README.md	export-ignore
+.travis.yml	export-ignore
+travis/*	export-ignore
+tests/*		export-ignore
+
