--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 .gitattributes	export-ignore
 README.md	export-ignore
 .travis.yml	export-ignore
-travis/*	export-ignore
-tests/*		export-ignore
+travis		export-ignore
+tests		export-ignore
 
