--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
-*		text=auto
-.gitattributes	export-ignore
-README.md	export-ignore
-.travis.yml	export-ignore
-travis		export-ignore
-tests		export-ignore
+*			text=auto
+.gitattributes		export-ignore
+README.md		export-ignore
+phpunit.xml.dist	export-ignore
+.travis.yml		export-ignore
+travis			export-ignore
+tests			export-ignore
 
