--- a/config/services.yml
+++ b/config/services.yml
@@ -35,16 +35,19 @@ services:
         class: fq\boardnotices\rules\in_default_usergroup
         arguments:
             - @user
+            - @fq.boardnotices.datalayer
 
     fq.boardnotices.rules.in_usergroup:
         class: fq\boardnotices\rules\in_usergroup
         arguments:
             - @user
+            - @fq.boardnotices.datalayer
 
     fq.boardnotices.rules.has_never_posted:
         class: fq\boardnotices\rules\has_never_posted
         arguments:
             - @user
+            - @fq.boardnotices.datalayer
 
     fq.boardnotices.rules.not_logged_in:
         class: fq\boardnotices\rules\not_logged_in
@@ -55,11 +58,13 @@ services:
         class: fq\boardnotices\rules\style
         arguments:
             - @user
+            - @fq.boardnotices.datalayer
 
     fq.boardnotices.rules.language:
         class: fq\boardnotices\rules\language
         arguments:
             - @user
+            - @fq.boardnotices.datalayer
 
     fq.boardnotices.rules.rank:
         class: fq\boardnotices\rules\rank
