Fix for guest styles

--- a/config/services.yml
+++ b/config/services.yml
@@ -65,6 +65,8 @@ services:
         arguments:
             - @user
             - @fq.boardnotices.datalayer
+            - @request
+            - @config
 
     fq.boardnotices.rules.language:
         class: fq\boardnotices\rules\language
