Added a preview page

--- a/config/services.yml
+++ b/config/services.yml
@@ -18,6 +18,8 @@ services:
         arguments:
             - @user
             - @template
+            - @request
+            - @fq.boardnotices.datalayer
         tags:
             - { name: event.listener }
 
