--- a/config/services.yml
+++ b/config/services.yml
@@ -70,6 +70,11 @@ services:
         arguments:
             - @user
 
+    fq.boardnotices.rules.logged_in:
+        class: fq\boardnotices\rules\logged_in
+        arguments:
+            - @user
+
     fq.boardnotices.rules.style:
         class: fq\boardnotices\rules\style
         arguments:
