--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
       "display-name": "Board Notices Manager",
       "soft-require" : {
          "phpbb/phpbb": ">=3.1.2,<3.2.*@dev"
-      }
+      },
+		"version-check": {
+			"host": "raw.githubusercontent.com/",
+			"directory": "/gouarfig/board-notices/master/",
+			"filename": "version.json"
+		}
    }
 }
