--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,5 @@ phpunit.xml.dist	export-ignore
 .travis.yml		export-ignore
 travis			export-ignore
 tests			export-ignore
+clean_chmod.sh		export-ignore
 
