Try to add some test coverage information

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,3 +53,5 @@ script:
 - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' =
   'mysqli' ]; then phpBB/ext/$EXTNAME/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/';
   fi"
+after_success: ./travis/update-gh-pages.sh
+
