--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -41,5 +41,7 @@
 
 	<logging>
 		<log type="coverage-clover" target="./logs/clover.xml"/>
+		<log type="coverage-html" target="./logs/coverage" lowUpperBound="35" highLowerBound="70"/>
+		<log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
 	</logging>
 </phpunit>
