--- a/config/services.yml
+++ b/config/services.yml
@@ -2,10 +2,11 @@ parameters:
     tables.boardnotices.notices: %core.table_prefix%notices
     tables.boardnotices.notices_rules: %core.table_prefix%notices_rules
     tables.boardnotices.notices_seen: %core.table_prefix%notices_seen
+    tables.boardnotices.forums_visited: %core.table_prefix%forums_visited
 
 services:
-    fq.boardnotices.datalayer:
-        class: fq\boardnotices\datalayer
+    fq.boardnotices.repository.legacy:
+        class: fq\boardnotices\repository\legacy
         arguments:
             - @dbal.conn
             - @user
@@ -14,6 +15,7 @@ services:
             - %tables.boardnotices.notices%
             - %tables.boardnotices.notices_rules%
             - %tables.boardnotices.notices_seen%
+            - %tables.boardnotices.forums_visited%
 
     fq.boardnotices.repository.boardnotices:
         class: fq\boardnotices\repository\boardnotices
@@ -24,6 +26,7 @@ services:
             - %tables.boardnotices.notices%
             - %tables.boardnotices.notices_rules%
             - %tables.boardnotices.notices_seen%
+            - %tables.boardnotices.forums_visited%
 
     fq.boardnotices.listener:
         class: fq\boardnotices\event\listener
@@ -60,37 +63,37 @@ services:
         class: fq\boardnotices\rules\in_default_usergroup
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.in_usergroup:
         class: fq\boardnotices\rules\in_usergroup
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.not_in_usergroup:
         class: fq\boardnotices\rules\not_in_usergroup
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.has_never_posted:
         class: fq\boardnotices\rules\has_never_posted
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.has_never_posted_in_forum:
         class: fq\boardnotices\rules\has_never_posted_in_forum
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.has_posted_in_forum:
         class: fq\boardnotices\rules\has_posted_in_forum
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.not_logged_in:
         class: fq\boardnotices\rules\not_logged_in
@@ -106,7 +109,7 @@ services:
         class: fq\boardnotices\rules\style
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
             - @request
             - @config
 
@@ -114,13 +117,13 @@ services:
         class: fq\boardnotices\rules\language
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.rank:
         class: fq\boardnotices\rules\rank
         arguments:
             - @user
-            - @fq.boardnotices.datalayer
+            - @fq.boardnotices.repository.legacy
 
     fq.boardnotices.rules.in_forum:
         class: fq\boardnotices\rules\in_forum
