Added caching to notices

--- a/config/services.yml
+++ b/config/services.yml
@@ -23,6 +23,7 @@ services:
             - @dbal.conn
             - @user
             - @cache
+            - @config
             - %tables.boardnotices.notices%
             - %tables.boardnotices.notices_rules%
             - %tables.boardnotices.notices_seen%
