--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,8 +10,8 @@
          stopOnFailure="false"
          syntaxCheck="false"
          verbose="true"
-         bootstrap="../../../tests/bootstrap.php"
->
+         bootstrap="../../../tests/bootstrap.php">
+
 	<testsuites>
 		<testsuite name="Extension Test Suite">
 			<directory suffix="_test.php">./tests</directory>
@@ -29,12 +29,10 @@
 		<whitelist processUncoveredFilesFromWhitelist="true">
 			<directory suffix=".php">./</directory>
 			<exclude>
-				<directory suffix=".php">./core/language/</directory>
-				<directory suffix=".php">./core/migrations/</directory>
-				<directory suffix=".php">./core/style/</directory>
 				<directory suffix=".php">./language/</directory>
 				<directory suffix=".php">./migrations/</directory>
-				<directory suffix=".php">./style/</directory>
+				<directory suffix=".php">./styles/</directory>
+				<directory suffix=".php">./tests/</directory>
 			</exclude>
 		</whitelist>
 	</filter>
