--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -41,4 +41,9 @@
 		<log type="coverage-html" target="./logs/coverage" lowUpperBound="35" highLowerBound="70"/>
 		<log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
 	</logging> -->
+
+	<php>
+		<server name="PHPBB_FUNCTIONAL_URL" value="http://localhost/" />
+	</php>
+
 </phpunit>
