--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
 	"type": "phpbb-extension",
 	"description": "With this extension, you can manage all sorts of notices for your board",
 	"homepage": "https://github.com/gouarfig/board-notices",
-	"version": "0.3.1",
-	"time": "2015-08-28",
-	"license": "GPL-2.0",
+	"version": "0.4.0",
+	"time": "2019-01-21",
+	"license": "GPL-2.0-only",
 	"authors": [{
 			"name": "Fred Quointeau",
 			"email": "frederic.quointeau@gmail.com",
@@ -19,7 +19,7 @@
 	"extra": {
 		"display-name": "Board Notices Manager",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.2,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.2,<3.3@dev"
 		},
 		"version-check": {
 			"host": "gouarfig.github.io",
