--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ matrix:
       env: DB=mysqli
     - php: 7.2
       env: DB=mysqli
+    - php: 7.3
+      env: DB=mysqli
+  allow_failures:
+    - php: 7.3
   fast_finish: true
 
 env:
