--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
     - php: 7.1
       env: DB=mysqli
     - php: 7.2
-      env: DB=mysqli
+      env: DB=mysqli;CODACY=1
     - php: 7.3
       env: DB=mysqli
   allow_failures:
@@ -62,4 +62,4 @@ script:
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover build/coverage/xml; fi"
 
 after-script:
-  - php vendor/bin/coverage/codacycoverage clover build/coverage/xml
+  - sh -c "if [ '$CODACY' == '1' ]; then php phpBB/vendor/bin/coverage/codacycoverage clover build/coverage/xml; fi"
