--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,5 @@ script:
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover build/coverage/xml; fi"
 
-after-script:
+after_script:
   - sh -c "if [ '$CODACY' == '1' ]; then php phpBB/vendor/bin/coverage/codacycoverage clover build/coverage/xml; fi"
