--- a/.travis.yml
+++ b/.travis.yml
@@ -62,4 +62,4 @@ script:
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover build/coverage/xml; fi"
 
 after_script:
-  - sh -c "if [ '$CODACY' == '1' ]; then php phpBB/vendor/bin/coverage/codacycoverage clover build/coverage/xml; fi"
+  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/coverage/codacycoverage clover build/coverage/xml; fi"
