--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ install:
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
   - sh -c "if [ '$EPV' = '1' -a '$NOTESTS' = '1' ]; then cd phpBB; composer remove sami/sami --dev --no-interaction; composer require phpbb/epv:dev-master --dev --no-interaction --ignore-platform-reqs; cd ../; fi"
-  - composer require codacy/coverage:dev-master --dev --no-interaction
+  - sh -c "if [ '$CODACY' = '1' ]; then cd phpBB; composer require codacy/coverage:dev-master --dev --no-interaction; cd ../; fi"
 
 before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
@@ -62,4 +62,4 @@ script:
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover build/coverage/xml; fi"
 
 after_script:
-  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/coverage/codacycoverage clover build/coverage/xml; fi"
+  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage clover build/coverage/xml; fi"
