--- a/config/services.yml
+++ b/config/services.yml
@@ -1,182 +1,182 @@
 parameters:
-    tables.boardnotices.notices: %core.table_prefix%notices
-    tables.boardnotices.notices_rules: %core.table_prefix%notices_rules
-    tables.boardnotices.notices_seen: %core.table_prefix%notices_seen
-    tables.boardnotices.forums_visited: %core.table_prefix%forums_visited
+  tables.boardnotices.notices: '%core.table_prefix%notices'
+  tables.boardnotices.notices_rules: '%core.table_prefix%notices_rules'
+  tables.boardnotices.notices_seen: '%core.table_prefix%notices_seen'
+  tables.boardnotices.forums_visited: '%core.table_prefix%forums_visited'
 
 services:
-    fq.boardnotices.serializer:
-        class: fq\boardnotices\serializer
+  fq.boardnotices.serializer:
+    class: fq\boardnotices\serializer
 
-    fq.boardnotices.repository.legacy:
-        class: fq\boardnotices\repository\legacy
-        arguments:
-            - @dbal.conn
-            - @user
-            - @cache
-            - @config
-            - %tables.boardnotices.notices%
-            - %tables.boardnotices.notices_rules%
-            - %tables.boardnotices.notices_seen%
-            - %tables.boardnotices.forums_visited%
+  fq.boardnotices.repository.legacy:
+    class: fq\boardnotices\repository\legacy
+    arguments:
+      - '@dbal.conn'
+      - '@user'
+      - '@cache'
+      - '@config'
+      - '%tables.boardnotices.notices%'
+      - '%tables.boardnotices.notices_rules%'
+      - '%tables.boardnotices.notices_seen%'
+      - '%tables.boardnotices.forums_visited%'
 
-    fq.boardnotices.repository.boardnotices:
-        class: fq\boardnotices\repository\boardnotices
-        arguments:
-            - @dbal.conn
-            - @user
-            - @cache
-            - @config
-            - %tables.boardnotices.notices%
-            - %tables.boardnotices.notices_rules%
-            - %tables.boardnotices.notices_seen%
-            - %tables.boardnotices.forums_visited%
+  fq.boardnotices.repository.boardnotices:
+    class: fq\boardnotices\repository\boardnotices
+    arguments:
+      - '@dbal.conn'
+      - '@user'
+      - '@cache'
+      - '@config'
+      - '%tables.boardnotices.notices%'
+      - '%tables.boardnotices.notices_rules%'
+      - '%tables.boardnotices.notices_seen%'
+      - '%tables.boardnotices.forums_visited%'
 
-    fq.boardnotices.listener:
-        class: fq\boardnotices\event\listener
-        arguments:
-            - @user
-            - @config
-            - @template
-            - @request
-            - @fq.boardnotices.repository.boardnotices
-        tags:
-            - { name: event.listener }
+  fq.boardnotices.listener:
+    class: fq\boardnotices\event\listener
+    arguments:
+      - '@user'
+      - '@config'
+      - '@template'
+      - '@request'
+      - '@fq.boardnotices.repository.boardnotices'
+    tags:
+      - { name: event.listener }
 
-    fq.boardnotices.domain.rules:
-        class: fq\boardnotices\domain\rules
-        arguments:
-            - %core.root_path%
+  fq.boardnotices.domain.rules:
+    class: fq\boardnotices\domain\rules
+    arguments:
+      - '%core.root_path%'
 
-    fq.boardnotices.rules.anniversary:
-        class: fq\boardnotices\rules\anniversary
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.anniversary:
+    class: fq\boardnotices\rules\anniversary
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.birthday:
-        class: fq\boardnotices\rules\birthday
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.birthday:
+    class: fq\boardnotices\rules\birthday
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.date:
-        class: fq\boardnotices\rules\date
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.date:
+    class: fq\boardnotices\rules\date
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.in_default_usergroup:
-        class: fq\boardnotices\rules\in_default_usergroup
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.in_default_usergroup:
+    class: fq\boardnotices\rules\in_default_usergroup
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.in_usergroup:
-        class: fq\boardnotices\rules\in_usergroup
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.in_usergroup:
+    class: fq\boardnotices\rules\in_usergroup
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.not_in_usergroup:
-        class: fq\boardnotices\rules\not_in_usergroup
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.not_in_usergroup:
+    class: fq\boardnotices\rules\not_in_usergroup
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.has_never_posted:
-        class: fq\boardnotices\rules\has_never_posted
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.has_never_posted:
+    class: fq\boardnotices\rules\has_never_posted
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.has_never_posted_in_forum:
-        class: fq\boardnotices\rules\has_never_posted_in_forum
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.has_never_posted_in_forum:
+    class: fq\boardnotices\rules\has_never_posted_in_forum
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.has_posted_in_forum:
-        class: fq\boardnotices\rules\has_posted_in_forum
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.has_posted_in_forum:
+    class: fq\boardnotices\rules\has_posted_in_forum
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.not_logged_in:
-        class: fq\boardnotices\rules\not_logged_in
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.not_logged_in:
+    class: fq\boardnotices\rules\not_logged_in
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.logged_in:
-        class: fq\boardnotices\rules\logged_in
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.logged_in:
+    class: fq\boardnotices\rules\logged_in
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.style:
-        class: fq\boardnotices\rules\style
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
-            - @request
-            - @config
+  fq.boardnotices.rules.style:
+    class: fq\boardnotices\rules\style
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
+      - '@request'
+      - '@config'
 
-    fq.boardnotices.rules.language:
-        class: fq\boardnotices\rules\language
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.language:
+    class: fq\boardnotices\rules\language
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.rank:
-        class: fq\boardnotices\rules\rank
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.rank:
+    class: fq\boardnotices\rules\rank
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.in_forum:
-        class: fq\boardnotices\rules\in_forum
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @request
+  fq.boardnotices.rules.in_forum:
+    class: fq\boardnotices\rules\in_forum
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@request'
 
-    fq.boardnotices.rules.has_not_posted_for:
-        class: fq\boardnotices\rules\has_not_posted_for
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.has_not_posted_for:
+    class: fq\boardnotices\rules\has_not_posted_for
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.has_not_visited_for:
-        class: fq\boardnotices\rules\has_not_visited_for
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
-            - @fq.boardnotices.repository.legacy
+  fq.boardnotices.rules.has_not_visited_for:
+    class: fq\boardnotices\rules\has_not_visited_for
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
+      - '@fq.boardnotices.repository.legacy'
 
-    fq.boardnotices.rules.has_posted_exactly:
-        class: fq\boardnotices\rules\has_posted_exactly
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.has_posted_exactly:
+    class: fq\boardnotices\rules\has_posted_exactly
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.has_posted_less:
-        class: fq\boardnotices\rules\has_posted_less
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.has_posted_less:
+    class: fq\boardnotices\rules\has_posted_less
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
 
-    fq.boardnotices.rules.has_posted_more:
-        class: fq\boardnotices\rules\has_posted_more
-        arguments:
-            - @fq.boardnotices.serializer
-            - @user
+  fq.boardnotices.rules.has_posted_more:
+    class: fq\boardnotices\rules\has_posted_more
+    arguments:
+      - '@fq.boardnotices.serializer'
+      - '@user'
