--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,13 @@
 *			text=auto
+.eslintrc.js	export-ignore
 .gitattributes		export-ignore
-README.md		export-ignore
-phpunit.xml.dist	export-ignore
+.gitignore	export-ignore
 .travis.yml		export-ignore
+clean_chmod.sh		export-ignore
+composer.json		export-ignore
+composer.lock		export-ignore
+phpunit.xml.dist	export-ignore
+README.md		export-ignore
 travis			export-ignore
 tests			export-ignore
-clean_chmod.sh		export-ignore
-
+vendor			export-ignore
