--- a/config/services.yml
+++ b/config/services.yml
@@ -55,24 +55,28 @@ services:
   fq.boardnotices.rules.anniversary:
     class: fq\boardnotices\rules\anniversary
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.birthday:
     class: fq\boardnotices\rules\birthday
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.date:
     class: fq\boardnotices\rules\date
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.in_default_usergroup:
     class: fq\boardnotices\rules\in_default_usergroup
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -80,6 +84,7 @@ services:
   fq.boardnotices.rules.in_usergroup:
     class: fq\boardnotices\rules\in_usergroup
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -87,6 +92,7 @@ services:
   fq.boardnotices.rules.not_in_usergroup:
     class: fq\boardnotices\rules\not_in_usergroup
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -94,6 +100,7 @@ services:
   fq.boardnotices.rules.has_never_posted:
     class: fq\boardnotices\rules\has_never_posted
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -101,6 +108,7 @@ services:
   fq.boardnotices.rules.has_never_posted_in_forum:
     class: fq\boardnotices\rules\has_never_posted_in_forum
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -108,6 +116,7 @@ services:
   fq.boardnotices.rules.has_posted_in_forum:
     class: fq\boardnotices\rules\has_posted_in_forum
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -115,18 +124,21 @@ services:
   fq.boardnotices.rules.not_logged_in:
     class: fq\boardnotices\rules\not_logged_in
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.logged_in:
     class: fq\boardnotices\rules\logged_in
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.style:
     class: fq\boardnotices\rules\style
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -136,6 +148,7 @@ services:
   fq.boardnotices.rules.language:
     class: fq\boardnotices\rules\language
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -143,6 +156,7 @@ services:
   fq.boardnotices.rules.rank:
     class: fq\boardnotices\rules\rank
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -150,6 +164,7 @@ services:
   fq.boardnotices.rules.in_forum:
     class: fq\boardnotices\rules\in_forum
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@request'
@@ -157,12 +172,14 @@ services:
   fq.boardnotices.rules.has_not_posted_for:
     class: fq\boardnotices\rules\has_not_posted_for
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.has_not_visited_for:
     class: fq\boardnotices\rules\has_not_visited_for
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
       - '@fq.boardnotices.repository.legacy'
@@ -170,17 +187,20 @@ services:
   fq.boardnotices.rules.has_posted_exactly:
     class: fq\boardnotices\rules\has_posted_exactly
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.has_posted_less:
     class: fq\boardnotices\rules\has_posted_less
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
 
   fq.boardnotices.rules.has_posted_more:
     class: fq\boardnotices\rules\has_posted_more
     arguments:
+      - '@fq.boardnotices.service.constants'
       - '@fq.boardnotices.service.serializer'
       - '@user'
