--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
       env: DB=mysqli
     - php: 7.2
       env: DB=mysqli;CODACY=1
-    - php: 7.3
-      env: DB=mysqli
-  allow_failures:
-    - php: 7.3
+  #   - php: 7.3
+  #     env: DB=mysqli
+  # allow_failures:
+  #   - php: 7.3
   fast_finish: true
 
 env:
