--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
     - php: 7.0
       env: DB=mysqli
     - php: 7.1
-      env: DB=mysqli
+      env: DB=mysqli;CODACY=1
     - php: 7.2
       env: DB=mysqli;CODECOV=1
   #   - php: 7.3
@@ -59,10 +59,10 @@ script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
-  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover build/coverage/xml; fi"
+  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_script:
-  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage clover build/coverage/xml; fi"
+  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_success:
-  - sh -c "if [ '$CODECOV' = '1' ]; then bash <(curl -s https://codecov.io/bash); fi"
+  - bash -c "if [ '$CODECOV' = '1' ]; then bash <(curl -s https://codecov.io/bash); fi"
