--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=0.5.1
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
 sonar.tests=./tests/
-sonar.exclusions=./language/, ./vendor/
+sonar.exclusions=./language/, ./vendor/, ./tests/
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
