Fix property name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,5 +15,5 @@ sonar.exclusions=language/**, vendor/**, tests/**
 sonar.sourceEncoding=UTF-8
 
 # phpunit tests and code coverage
-sonar.php.coverage.reportPath=./phpunit.coverage.xml
 sonar.php.tests.reportPath=./phpunit.xml
+sonar.php.coverage.reportPaths=./phpunit.coverage.xml
