Fix dependency injection in admin module + test

--- a/config/services.yml
+++ b/config/services.yml
@@ -90,6 +90,7 @@ services:
       - '@fq.boardnotices.service.phpbb.functions'
       - '@request'
       - '@config'
+      - '@log'
       - '@fq.boardnotices.repository.notices'
 
   fq.boardnotices.domain.rules:
