--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "With this extension, you can manage all sorts of notices for your board",
 	"homepage": "https://github.com/gouarfig/board-notices",
-	"version": "0.5.2-beta2",
-	"time": "2019-02-08",
+	"version": "0.5.3-beta",
+	"time": "2019-07-15",
 	"license": "GPL-2.0-only",
 	"authors": [{
 			"name": "Fred Quointeau",
