Force trusty again to see if that fixes sonarcube now. Everyt time the same. A couple of months away and everything is fucked up

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 sudo: required
+dist: trusty
 
 matrix:
   include:
@@ -33,6 +34,7 @@ matrix:
 
 services:
   - mysql
+  - postgresql
 
 addons:
   sonarcloud:
