Use api instead of user for language strings

--- a/config/services.yml
+++ b/config/services.yml
@@ -160,7 +160,7 @@ services:
     class: fq\boardnotices\rules\has_never_posted
     arguments:
       - '@fq.boardnotices.service.serializer'
-      - '@user'
+      - '@fq.boardnotices.service.phpbb.api'
       - '@fq.boardnotices.repository.users'
 
   fq.boardnotices.rules.has_never_posted_in_forum:
